# lai

./: .gitignore  Cargo.toml  README.md  lai.alisp  prompt.md
skills/: docker.json  git.alisp  math_operations.alisp  project.json  research.alisp
src/: agent.rs  config.rs  hotreload.rs  main.rs  memory.rs  security.rs  skills.rs  tools.rs
src/llm/: llamacpp.rs  mod.rs  openai.rs
