[package]
name = "lai"
version = "0.1.0"
edition = "2024"

[dependencies]
alisp = { path = "/home/jihoo/alisp" }
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

regex = "1"
notify = "7"
rusqlite = { version = "0.31", features = ["bundled"] }
